--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ resolver = "2"
 [dependencies]
 encoding_rs = { version="0.8", optional=true }
 serde = { version = "1.0", features = ["derive"], optional=true }
+ts-rs = { version = "10.1", features = ["serde-compat", "serde-json-impl", "chrono-impl"] }
 
 [dev-dependencies]
 mail-parser = { path = ".", features = ["serde_support", "full_encoding"] }
