Add a feature in cargo.toml to conditionally derive TS types, so as to not intefere with wasm binding compilation, and break the ts and wasm bindings into separate npm workspaces

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ default = ["full_encoding"]
 full_encoding = ["encoding_rs"]
 serde_support = ["serde"]
 ludicrous_mode = []
+ts-bindings = []
 
 [profile.bench]
 debug = true
