--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/asimpletune/mail-parser#readme",
   "scripts": {
-    "build:ts": "TS_RS_EXPORT_DIR='mail-parser-ts/bindings' cargo test export_bindings --features ts-bindings",
-    "build:wasm": "wasm-pack build --target web --features serde_support && mv pkg mail-parser-wasm/",
+    "build:ts": "npm run --workspace mail-parser-ts build",
+    "build:wasm": "npm run --workspace mail-parser-wasm build",
     "build": "npm run build:ts && npm run build:wasm",
-    "pack:ts": "npm pack -w mail-parser-ts --pack-destination mail-parser-ts",
-    "pack:wasm": "npm pack -w mail-parser-wasm --pack-destination mail-parser-wasm",
+    "pack:ts": "npm pack --workspace mail-parser-ts --pack-destination mail-parser-ts",
+    "pack:wasm": "npm pack --workspace mail-parser-wasm --pack-destination mail-parser-wasm",
     "pack": "npm run pack:ts && npm run pack:wasm"
   }
 }
