--- a/mail-parser-wasm/package.json
+++ b/mail-parser-wasm/package.json
@@ -20,25 +20,26 @@
   "exports": {
     ".": {
       "node": "./dist/node/mail_parser.js",
+      "browser": "./dist/web/mail_parser.js",
       "default": "./dist/web/mail_parser.js"
     },
-    "./node": "./dist/node/mail_parser.js",
-    "./web": "./dist/web/mail_parser.js",
-    "./mail_parser_bg.wasm": {
-      "node": "./dist/node/mail_parser_bg.wasm",
-      "default": "./dist/web/mail_parser_bg.wasm"
+    "./node": {
+      "types": "./dist/node/mail_parser.d.ts",
+      "import": "./dist/node/mail_parser.js",
+      "require": "./dist/node/mail_parser.js"
     },
-    "./node/mail_parser_bg.wasm": "./dist/node/mail_parser_bg.wasm",
-    "./web/mail_parser_bg.wasm": "./dist/web/mail_parser_bg.wasm"
+    "./web": {
+      "types": "./dist/web/mail_parser.d.ts",
+      "import": "./dist/web/mail_parser.js"
+    }
   },
   "typesVersions": {
     "*": {
-      "node": [
-        "dist/node/mail_parser.d.ts"
-      ],
-      "browser": [
-        "dist/web/mail_parser.d.ts"
-      ]
+      "node": ["dist/node/mail_parser.d.ts"],
+      "browser": ["dist/web/mail_parser.d.ts"],
+      "./node": ["dist/node/mail_parser.d.ts"],
+      "./web": ["dist/web/mail_parser.d.ts"],
+      "default": ["dist/web/mail_parser.d.ts"]
     }
   },
   "keywords": [
